--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
   </head>
+
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+    <header class="page-header">
+      <h1 class="visually-hidden">Магазин «Мишка»</h1>
+      <div class="page-header__logo">
+        <img src="#" width="#" height="#" alt="Магазин «Мишка»">
+      </div>
+      <nav class="main-nav  main-nav--closed">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--active"><a><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
+            <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
+            <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
+            <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
+            <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <section class="category">
+      <header class="category__header">
+        <h2 class="category__title">Милые штучки ручной работы для дома</h2>
+      </header>
+      <div class="category__wrapper">
+        <div class="category__item  category__item--interior">
+          <span>Предметы интерьера</span>
+        </div>
+        <div class="category__item  category__item--toys">
+          <span>Детские игрушки</span>
+        </div>
+      </div>
+    </section>
+
+    <section class="featured">
+      <div class="featured__wrapper">
+        <h2 class="featured__title">Вязаные корзинки</h2>
+        <span class="featured__weekly">Товар недели</span>
+        <p class="featured__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table class="featured__description">
+          <tr>
+            <td>Цвет:</td>
+            <td>«Тиффани»/серый</td>
+          </tr>
+          <tr>
+            <td>Диаметр:</td>
+            <td>25 см</td>
+          </tr>
+          <tr>
+            <td>Высота:</td>
+            <td>15 см</td>
+          </tr>
+        </table>
+        <img class="featured__image" src="#" width="#" height="#" atl="Вязаные корзинки">
+        <span class="featured__price">Цена: 990 руб.</span>
+        <a class="featured__btn  btn" href="#">Заказать</a>
+      </div>
+    </section>
+
+    <section class="seo">
+      <div class="seo__wrapper">
+        <h2 class="seo__title">Коротко о нас:</h2>
+        <div class="seo__item">
+          <p class="seo__flower">Экологически чистые материалы</p>
+        </div>
+        <div class="seo__item">
+          <p class="seo__money">Скандинавский стиль по российской цене</p>
+        </div>
+        <div class="seo__item">
+          <p class="seo__heart">Увеличивает лайки на фотографиях</p>
+        </div>
+        <div class="seo__item">
+          <p class="seo__yarn">Связано вручную с любовью и умилением</p>
+        </div>
+        <div class="seo__item">
+          <p class="seo__rocket">Поддержка отечественного производителя</p>
+        </div>
+        <div class="seo__item">
+          <p class="seo__gift">Поставляется в подарочной упаковке</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="reviews__wrapper  slider">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__list">
+          <blockquote class="reviews__item  slider__item">
+            <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+            <cite>
+              <span class="reviews__auhor-name">Анастасия Красильникова</span>
+              <a class="reviews__auhor-nickname" href="#">@misssssiskras</a>
+            </cite>
+          </blockquote>
+        </div>
+        <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+        <button class="reviews__next" type="button">Следующий отзыв</button>
+        <a class="reviews__btn  btn" href="#">Написать</a>
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__info">
+          <tr>
+            <td>e-mail:</td>
+            <td>info@mimimishkashop.ru</td>
+          </tr>
+          <tr>
+            <td>адрес:</td>
+            <td>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+          </tr>
+        </table>
+        <div class="contacts__map">
+          <img src="#" width="#" height="#">
+        </div>
+        <a class="contacts__btn  btn" href="#"></a>
+      </div>
+    </section>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
+        <p class="page-footer__social">
+          <span class="social-links">
+            <a class="social-link social-link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+            <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social-link social-link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          </span>
+        </p>
+        <p class="page-footer__copyright">
+          <span>Разработано</span>
+          <a class="page-footer__copyright-link btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </div>
+    </footer>
 
   </body>
 </html>
