--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
   <body>
 
     <header class="page-header">
-      <h1 class="visually-hidden">Магазин «Мишка»</h1>
       <div class="page-header__logo">
-        <img src="#" width="#" height="#" alt="Магазин «Мишка»">
+        <a><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
       </div>
       <nav class="main-nav  main-nav--closed">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item main-nav__item--active"><a><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
-            <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
+            <li class="main-nav__item  main-nav__item--active"><a><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
+            <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
             <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
             <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
             <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
@@ -28,15 +27,15 @@
     </header>
 
     <section class="category">
-      <header class="category__header">
+      <div class="category__header">
         <h2 class="category__title">Милые штучки ручной работы для дома</h2>
-      </header>
+      </div>
       <div class="category__wrapper">
         <div class="category__item  category__item--interior">
-          <span>Предметы интерьера</span>
+          <h3><a href="#">Предметы интерьера</a></h3>
         </div>
         <div class="category__item  category__item--toys">
-          <span>Детские игрушки</span>
+          <h3><a href="#">Детские игрушки</a></h3>
         </div>
       </div>
     </section>
@@ -48,21 +47,21 @@
         <p class="featured__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
         <table class="featured__description">
           <tr>
-            <td>Цвет:</td>
-            <td>«Тиффани»/серый</td>
+            <td><span>Цвет:</span></td>
+            <td><span>«Тиффани»/серый</span></td>
           </tr>
           <tr>
-            <td>Диаметр:</td>
-            <td>25 см</td>
+            <td><span>Диаметр:</span></td>
+            <td><span>25 см</span></td>
           </tr>
           <tr>
-            <td>Высота:</td>
-            <td>15 см</td>
+            <td><span>Высота:</span></td>
+            <td><span>15 см</span></td>
           </tr>
         </table>
-        <img class="featured__image" src="#" width="#" height="#" atl="Вязаные корзинки">
+        <img class="featured__image" src="#" width="#" height="#" alt="Вязаные корзинки">
         <span class="featured__price">Цена: 990 руб.</span>
-        <a class="featured__btn  btn" href="#">Заказать</a>
+        <a class="featured__btn  btn  modal-btn" href="#">Заказать</a>
       </div>
     </section>
 
@@ -97,8 +96,8 @@
           <blockquote class="reviews__item  slider__item">
             <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
             <cite>
-              <span class="reviews__auhor-name">Анастасия Красильникова</span>
-              <a class="reviews__auhor-nickname" href="#">@misssssiskras</a>
+              <span class="reviews__author-name">Анастасия Красильникова</span>
+              <a class="reviews__author-nickname" href="#">@misssssiskras</a>
             </cite>
           </blockquote>
         </div>
@@ -113,36 +112,52 @@
         <h2 class="contacts__title">Контакты</h2>
         <table class="contacts__info">
           <tr>
-            <td>e-mail:</td>
-            <td>info@mimimishkashop.ru</td>
+            <td><span>e-mail:</span></td>
+            <td><a href="#">info@mimimishkashop.ru</a></td>
           </tr>
           <tr>
-            <td>адрес:</td>
-            <td>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</td>
+            <td><span>адрес:</span></td>
+            <td><span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span></td>
           </tr>
         </table>
         <div class="contacts__map">
           <img src="#" width="#" height="#">
         </div>
-        <a class="contacts__btn  btn" href="#"></a>
+        <a class="contacts__btn  btn" href="#">Напишите нам</a>
       </div>
     </section>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <p class="page-footer__social">
-          <span class="social-links">
-            <a class="social-link social-link--vk" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-            <a class="social-link social-link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            <a class="social-link social-link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          <span class="social">
+            <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+            <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+            <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
           </span>
         </p>
         <p class="page-footer__copyright">
           <span>Разработано</span>
-          <a class="page-footer__copyright-link btn" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
         </p>
       </div>
     </footer>
+
+    <section class="modal">
+      <form class="modal__form" action="#" method="post">
+        <h2 class="modal__title">Добавить в корзину</h2>
+        <span class="modal__size">Выберите размер:</span>
+        <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
+        <label class="modal__radio-label" for="size-s">S</label>
+        <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
+        <label class="modal__radio-label" for="size-m">M</label>
+        <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
+        <label class="modal__radio-label" for="size-l">L</label>
+        <input class="modal__submit" type="submit" name="submit" value="Добавить">
+      </form>
+    </section>
+
+    <div class="overlay"></div>
 
   </body>
 </html>
