--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
           <ul class="main-nav__list">
             <li class="main-nav__item"><a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
             <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
-            <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
+            <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
             <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
             <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
           </ul>
@@ -37,7 +37,7 @@
           <p>Рост 30 см, вес 200 г</p>
           <div class="catalog-item__buy">
             <span>1200 руб.</span>
-            <a class="catalog-item__basket" href="#">Добавить в корзину</a>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
           </div>
         </article>
         <article class="catalog-item">
@@ -46,7 +46,7 @@
           <p>Диаметр 15 см, высота 10 см</p>
           <div class="catalog-item__buy">
             <span>690 руб.</span>
-            <a class="catalog-item__basket" href="#">Добавить в корзину</a>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
           </div>
         </article>
         <article class="catalog-item">
@@ -55,7 +55,7 @@
           <p>Диаметр 30 см, высота 30 см</p>
           <div class="catalog-item__buy">
             <span>1500 руб.</span>
-            <a class="catalog-item__basket" href="#">Добавить в корзину</a>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
           </div>
         </article>
       </div>
@@ -68,7 +68,7 @@
       <div class="manufacture__wrapper">
         <video class="manufacture__video" src="#" width="#" height="#" poster="#"></video>
         <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="manufacture__btn  btn  modal-btn" href="#">Сделать заказ</a>
+        <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
       </div>
     </section>
 
@@ -83,7 +83,7 @@
         </p>
         <p class="page-footer__copyright">
           <span>Разработано</span>
-          <a class="page-footer__copyright-link  btn" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
         </p>
       </div>
     </footer>
