--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </tr>
         </table>
         <div class="contacts__map">
-          <img src="#" width="#" height="#">
+          <img src="#" width="#" height="#" alt="Карта">
         </div>
         <a class="contacts__btn  btn" href="#">Напишите нам</a>
       </div>
