--- a/form.html
+++ b/form.html
@@ -12,13 +12,14 @@
       <div class="page-header__logo">
         <a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
       </div>
+      <div class="page-header__open-nav">
+        <span class="page-header__toggle">Открыть меню</span>
+      </div>
       <nav class="main-nav  main-nav--closed">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
-            <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
-            <li class="main-nav__item  main-nav__item--active"><a>Вязание на заказ</a></li>
+            <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
+            <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
             <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
             <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
           </ul>
