--- a/catalog.html
+++ b/catalog.html
@@ -12,11 +12,12 @@
       <div class="page-header__logo">
         <a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
       </div>
+      <div class="page-header__open-nav">
+        <span class="page-header__toggle">Открыть меню</span>
+      </div>
       <nav class="main-nav  main-nav--closed">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
-            <li class="main-nav__item"><a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a></li>
             <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
             <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
             <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
@@ -32,27 +33,27 @@
       </div>
       <div class="catalog__wrapper">
         <article class="catalog-item">
-          <img src="#" width="#" height="#" alt="Зайчик">
-          <h2 class="catalog-item__title">Зайчик-попрыгайчик</h2>
-          <p>Рост 30 см, вес 200 г</p>
+          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Зайчик"></a>
+          <h1 class="catalog-item__title"><a href="#">Зайчик-попрыгайчик</a></h1>
+          <span>Рост 30 см, вес 200 г</span>
           <div class="catalog-item__buy">
             <span>1200 руб.</span>
             <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
           </div>
         </article>
         <article class="catalog-item">
-          <img src="#" width="#" height="#" alt="Корзинка">
-          <h2 class="catalog-item__title">Корзинка для белья</h2>
-          <p>Диаметр 15 см, высота 10 см</p>
+          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Корзинка"></a>
+          <h1 class="catalog-item__title"><a href="#">Корзинка для белья</a></h1>
+          <span>Диаметр 15 см, высота 10 см</span>
           <div class="catalog-item__buy">
             <span>690 руб.</span>
             <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
           </div>
         </article>
         <article class="catalog-item">
-          <img src="#" width="#" height="#" alt="Большая корзинка">
-          <h2 class="catalog-item__title">Большая корзинка для игрушек</h2>
-          <p>Диаметр 30 см, высота 30 см</p>
+          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Большая корзинка"></a>
+          <h1 class="catalog-item__title"><a href="#">Большая корзинка для игрушек</a></h1>
+          <span>Диаметр 30 см, высота 30 см</span>
           <div class="catalog-item__buy">
             <span>1500 руб.</span>
             <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
@@ -66,7 +67,7 @@
         <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
       </div>
       <div class="manufacture__wrapper">
-        <video class="manufacture__video" src="#" width="#" height="#" poster="#"></video>
+        <img class="manufacture__video" src="#" width="#" height="#">
         <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
         <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
       </div>
