--- a/catalog.html
+++ b/catalog.html
@@ -10,20 +10,18 @@
 
     <header class="page-header">
       <div class="page-header__logo">
-        <a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
+        <a href="index.html"><img src="#" width="86" height="35" alt="Магазин «Мишка»"></a>
       </div>
       <div class="page-header__open-nav">
         <span class="page-header__toggle">Открыть меню</span>
       </div>
       <nav class="main-nav  main-nav--closed">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
-            <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
-            <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
-            <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
-          </ul>
-        </div>
+        <ul class="main-nav__list">
+          <li class="main-nav__item  main-nav__item--active"><a href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
+          <li class="main-nav__item  main-nav__item--search"><a href="#">Поиск по сайту</a></li>
+          <li class="main-nav__item  main-nav__item--basket"><a href="#">Корзина: пока пуста</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -33,31 +31,25 @@
       </div>
       <div class="catalog__wrapper">
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Зайчик"></a>
+          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Зайчик"></a>
           <h1 class="catalog-item__title"><a href="#">Зайчик-попрыгайчик</a></h1>
           <span>Рост 30 см, вес 200 г</span>
-          <div class="catalog-item__buy">
-            <span>1200 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
-          </div>
+          <span class="catalog-item__price">1200 руб.</span>
+          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Корзинка"></a>
+          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Корзинка для белья</a></h1>
           <span>Диаметр 15 см, высота 10 см</span>
-          <div class="catalog-item__buy">
-            <span>690 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
-          </div>
+          <span class="catalog-item__price">690 руб.</span>
+          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="#" height="#" alt="Большая корзинка"></a>
+          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Большая корзинка для игрушек</a></h1>
           <span>Диаметр 30 см, высота 30 см</span>
-          <div class="catalog-item__buy">
-            <span>1500 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
-          </div>
+          <span class="catalog-item__price">1500 руб.</span>
+          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
         </article>
       </div>
     </section>
@@ -67,7 +59,7 @@
         <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
       </div>
       <div class="manufacture__wrapper">
-        <img class="manufacture__video" src="#" width="#" height="#">
+        <img class="manufacture__video" src="#" width="260" height="150" alt="Процесс производства">
         <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
         <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
       </div>
@@ -75,30 +67,29 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <p class="page-footer__social">
-          <span class="social">
-            <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
-          </span>
-        </p>
-        <p class="page-footer__copyright">
-          <span>Разработано</span>
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
+        <div class="social">
+          <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+        </div>
+        <div class="page-footer__copyright">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru"><span>Разработано</span></a>
+        </div>
       </div>
     </footer>
 
     <section class="modal">
       <form class="modal__form" action="#" method="post">
-        <h2 class="modal__title">Добавить в корзину</h2>
-        <span class="modal__size">Выберите размер:</span>
-        <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
-        <label class="modal__radio-label" for="size-s">S</label>
-        <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
-        <label class="modal__radio-label" for="size-m">M</label>
-        <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
-        <label class="modal__radio-label" for="size-l">L</label>
+        <h1 class="modal__title">Добавить в корзину</h1>
+        <span class="modal__choose-size">Выберите размер:</span>
+        <fieldset class="modal__size">
+          <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
+          <label class="modal__radio-label" for="size-s">S</label>
+          <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
+          <label class="modal__radio-label" for="size-m">M</label>
+          <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
+          <label class="modal__radio-label" for="size-l">L</label>
+        </fieldset>
         <input class="modal__submit" type="submit" name="submit" value="Добавить">
       </form>
     </section>
