--- a/form.html
+++ b/form.html
@@ -10,20 +10,18 @@
 
     <header class="page-header">
       <div class="page-header__logo">
-        <a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
+        <a href="index.html"><img src="#" width="86" height="35" alt="Магазин «Мишка»"></a>
       </div>
       <div class="page-header__open-nav">
         <span class="page-header__toggle">Открыть меню</span>
       </div>
       <nav class="main-nav  main-nav--closed">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
-            <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
-            <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
-            <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
-          </ul>
-        </div>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item  main-nav__item--active"><a href="form.html">Вязание на заказ</a></li>
+          <li class="main-nav__item  main-nav__item--search"><a href="#">Поиск по сайту</a></li>
+          <li class="main-nav__item  main-nav__item--basket"><a href="#">Корзина: пока пуста</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -85,17 +83,14 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <p class="page-footer__social">
-          <span class="social">
-            <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
-          </span>
-        </p>
-        <p class="page-footer__copyright">
-          <span>Разработано</span>
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
+        <div class="social">
+          <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+        </div>
+        <div class="page-footer__copyright">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru"><span>Разработано</span></a>
+        </div>
       </div>
     </footer>
 
