--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
 
     <header class="page-header">
       <div class="page-header__logo">
-        <a href="index.html"><img src="#" width="#" height="#" alt="Магазин «Мишка»"></a>
+        <a href="index.html"><img src="#" width="86" height="35" alt="Магазин «Мишка»"></a>
       </div>
       <div class="page-header__open-nav">
         <span class="page-header__toggle">Открыть меню</span>
       </div>
       <nav class="main-nav  main-nav--closed">
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item  main-nav__item--active"><a>Каталог товаров</a></li>
-            <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
-            <li class="main-nav__item"><a class="main-nav__search" href="#">Поиск по сайту</a></li>
-            <li class="main-nav__item"><a class="main-nav__basket" href="#">Корзина: пока пуста</a></li>
-          </ul>
-        </div>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
+          <li class="main-nav__item  main-nav__item--search"><a href="#">Поиск по сайту</a></li>
+          <li class="main-nav__item  main-nav__item--basket"><a href="#">Корзина: пока пуста</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -41,7 +39,7 @@
       </div>
     </section>
 
-    <section class="featured">
+    <article class="featured">
       <div class="featured__wrapper">
         <h2 class="featured__title">Вязаные корзинки</h2>
         <span class="featured__weekly">Товар недели</span>
@@ -60,33 +58,23 @@
             <td><span>15 см</span></td>
           </tr>
         </table>
-        <img class="featured__image" src="#" width="#" height="#" alt="Вязаные корзинки">
+        <img class="featured__image" src="#" width="260" height="315" alt="Вязаные корзинки">
         <span class="featured__price">Цена: 990 руб.</span>
         <a class="featured__btn  btn  modal-btn" href="#">Заказать</a>
       </div>
-    </section>
+    </article>
 
     <section class="seo">
       <div class="seo__wrapper">
         <h2 class="seo__title">Коротко о нас:</h2>
-        <div class="seo__item">
-          <p class="seo__flower">Экологически чистые материалы</p>
-        </div>
-        <div class="seo__item">
-          <p class="seo__money">Скандинавский стиль по российской цене</p>
-        </div>
-        <div class="seo__item">
-          <p class="seo__heart">Увеличивает лайки на фотографиях</p>
-        </div>
-        <div class="seo__item">
-          <p class="seo__yarn">Связано вручную с любовью и умилением</p>
-        </div>
-        <div class="seo__item">
-          <p class="seo__rocket">Поддержка отечественного производителя</p>
-        </div>
-        <div class="seo__item">
-          <p class="seo__gift">Поставляется в подарочной упаковке</p>
-        </div>
+        <ul class="seo__list">
+          <li class="seo__item  seo__item--flower">Экологически чистые материалы</li>
+          <li class="seo__item  seo__item--money">Скандинавский стиль по российской цене</li>
+          <li class="seo__item  seo__item--heart">Увеличивает лайки на фотографиях</li>
+          <li class="seo__item  seo__item--yarn">Связано вручную с любовью и умилением</li>
+          <li class="seo__item  seo__item--rocket">Поддержка отечественного производителя</li>
+          <li class="seo__item  seo__item--gift">Поставляется в подарочной упаковке</li>
+        </ul>
       </div>
     </section>
 
@@ -122,7 +110,7 @@
           </tr>
         </table>
         <div class="contacts__map">
-          <img src="#" width="#" height="#" alt="Карта">
+          <img src="#" width="260" height="457" alt="Карта">
         </div>
         <a class="contacts__btn  btn" href="#">Напишите нам</a>
       </div>
@@ -130,30 +118,29 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <p class="page-footer__social">
-          <span class="social">
-            <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
-            <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
-            <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
-          </span>
-        </p>
-        <p class="page-footer__copyright">
-          <span>Разработано</span>
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
+        <div class="social">
+          <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+          <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+          <a class="social__link  social__link--tw" href="https://www.twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+        </div>
+        <div class="page-footer__copyright">
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru"><span>Разработано</span></a>
+        </div>
       </div>
     </footer>
 
     <section class="modal">
       <form class="modal__form" action="#" method="post">
-        <h2 class="modal__title">Добавить в корзину</h2>
-        <span class="modal__size">Выберите размер:</span>
-        <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
-        <label class="modal__radio-label" for="size-s">S</label>
-        <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
-        <label class="modal__radio-label" for="size-m">M</label>
-        <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
-        <label class="modal__radio-label" for="size-l">L</label>
+        <h1 class="modal__title">Добавить в корзину</h1>
+        <span class="modal__choose-size">Выберите размер:</span>
+        <fieldset class="modal__size">
+          <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
+          <label class="modal__radio-label" for="size-s">S</label>
+          <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
+          <label class="modal__radio-label" for="size-m">M</label>
+          <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
+          <label class="modal__radio-label" for="size-l">L</label>
+        </fieldset>
         <input class="modal__submit" type="submit" name="submit" value="Добавить">
       </form>
     </section>
