--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
             </cite>
           </blockquote>
         </div>
-        <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-        <button class="reviews__next" type="button">Следующий отзыв</button>
+        <div class="reviews__slider-btn">
+          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+          <button class="reviews__next" type="button">Следующий отзыв</button>
+        </div>
         <a class="reviews__btn  btn" href="#">Написать</a>
       </div>
     </section>
@@ -102,7 +104,7 @@
         <table class="contacts__info">
           <tr>
             <td><span>e-mail:</span></td>
-            <td><a href="#">info@mimimishkashop.ru</a></td>
+            <td><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
           </tr>
           <tr>
             <td><span>адрес:</span></td>
@@ -130,7 +132,7 @@
     </footer>
 
     <section class="modal">
-      <form class="modal__form" action="#" method="post">
+      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
         <h1 class="modal__title">Добавить в корзину</h1>
         <span class="modal__choose-size">Выберите размер:</span>
         <fieldset class="modal__size">
