--- a/catalog.html
+++ b/catalog.html
@@ -34,35 +34,37 @@
           <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Зайчик"></a>
           <h1 class="catalog-item__title"><a href="#">Зайчик-попрыгайчик</a></h1>
           <span>Рост 30 см, вес 200 г</span>
-          <span class="catalog-item__price">1200 руб.</span>
-          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__buy">
+            <span class="catalog-item__price">1200 руб.</span>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Корзинка для белья</a></h1>
           <span>Диаметр 15 см, высота 10 см</span>
-          <span class="catalog-item__price">690 руб.</span>
-          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__buy">
+            <span class="catalog-item__price">690 руб.</span>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          </div>
         </article>
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Большая корзинка для игрушек</a></h1>
           <span>Диаметр 30 см, высота 30 см</span>
-          <span class="catalog-item__price">1500 руб.</span>
-          <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__buy">
+            <span class="catalog-item__price">1500 руб.</span>
+            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          </div>
         </article>
       </div>
     </section>
 
     <section class="manufacture">
-      <div class="manufacture__header">
-        <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
-      </div>
-      <div class="manufacture__wrapper">
-        <img class="manufacture__video" src="#" width="260" height="150" alt="Процесс производства">
-        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
-      </div>
+      <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
+      <img class="manufacture__video" src="#" width="260" height="150" alt="Процесс производства">
+      <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+      <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
     </section>
 
     <footer class="page-footer">
@@ -79,7 +81,7 @@
     </footer>
 
     <section class="modal">
-      <form class="modal__form" action="#" method="post">
+      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
         <h1 class="modal__title">Добавить в корзину</h1>
         <span class="modal__choose-size">Выберите размер:</span>
         <fieldset class="modal__size">
