--- a/form.html
+++ b/form.html
@@ -32,7 +32,7 @@
       <div class="order__subtitle">
         <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       </div>
-      <form class="order-form" action="#" method="post">
+      <form class="order-form" action="https://echo.htmlacademy.ru/" method="post">
         <fieldset class="order-form__type">
           <legend class="order-form__title">Тип</legend>
           <input class="order-form__radio" type="radio" name="type" value="interior" id="interior" checked>
