--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
 
     <header class="page-header">
       <div class="page-header__logo">
-        <a href="index.html"><img src="#" width="86" height="35" alt="Магазин «Мишка»"></a>
+        <a href="index.html"><img src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
       </div>
       <div class="page-header__open-nav">
         <span class="page-header__toggle">Открыть меню</span>
@@ -31,7 +32,7 @@
       </div>
       <div class="catalog__wrapper">
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Зайчик"></a>
+          <a class="catalog-item__image" href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик"></a>
           <h1 class="catalog-item__title"><a href="#">Зайчик-попрыгайчик</a></h1>
           <span>Рост 30 см, вес 200 г</span>
           <div class="catalog-item__buy">
@@ -40,7 +41,7 @@
           </div>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Корзинка"></a>
+          <a class="catalog-item__image" href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Корзинка для белья</a></h1>
           <span>Диаметр 15 см, высота 10 см</span>
           <div class="catalog-item__buy">
@@ -49,7 +50,7 @@
           </div>
         </article>
         <article class="catalog-item">
-          <a class="catalog-item__image" href="#"><img src="#" width="260" height="195" alt="Большая корзинка"></a>
+          <a class="catalog-item__image" href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка"></a>
           <h1 class="catalog-item__title"><a href="#">Большая корзинка для игрушек</a></h1>
           <span>Диаметр 30 см, высота 30 см</span>
           <div class="catalog-item__buy">
@@ -62,7 +63,7 @@
 
     <section class="manufacture">
       <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
-      <img class="manufacture__video" src="#" width="260" height="150" alt="Процесс производства">
+      <img class="manufacture__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
       <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
       <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
     </section>
