--- a/form.html
+++ b/form.html
@@ -4,13 +4,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
 
     <header class="page-header">
       <div class="page-header__logo">
-        <a href="index.html"><img src="#" width="86" height="35" alt="Магазин «Мишка»"></a>
+        <a href="index.html"><img src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
       </div>
       <div class="page-header__open-nav">
         <span class="page-header__toggle">Открыть меню</span>
@@ -74,7 +75,7 @@
         </fieldset>
         <fieldset class="order-form__addition">
           <legend class="order-form__title">Доп</legend>
-          <textarea name="textarea">Опишите все ваши пожелания к заказу</textarea>
+          <textarea class="order-form__textarea" name="textarea">Опишите все ваши пожелания к заказу</textarea>
         </fieldset>
         <small class="order-form__small"><sup>*</sup>Поля обязательны для заполнения</small>
         <input class="order-form__submit btn" type="submit" name="submit" value="Отправить заказ">
