--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             </cite>
           </blockquote>
         </div>
-        <div class="reviews__slider-btn">
-          <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-          <button class="reviews__next" type="button">Следующий отзыв</button>
+        <div class="reviews__sliders-btn">
+          <button class="reviews__slider-btn  reviews__slider-btn--prev" type="button">Предыдущий отзыв</button>
+          <button class="reviews__slider-btn  reviews__slider-btn--next" type="button">Следующий отзыв</button>
         </div>
         <a class="reviews__btn  btn" href="#">Написать</a>
       </div>
@@ -107,15 +107,15 @@
         <table class="contacts__info">
           <tr>
             <td><span>e-mail:</span></td>
-            <td><a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
+            <td><a class="contacts__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
           </tr>
           <tr>
             <td><span>адрес:</span></td>
-            <td><span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span></td>
+            <td class="contacts__address"><span>г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span></td>
           </tr>
         </table>
         <div class="contacts__map">
-          <img src="img/map-mobile@1x.jpg" width="260" height="457" alt="Карта">
+          <img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Карта">
         </div>
         <a class="contacts__btn  btn" href="#">Напишите нам</a>
       </div>
