--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       </div>
       <div class="category__wrapper">
         <div class="category__item  category__item--interior">
-          <h3><a class="category__link" href="#">Предметы интерьера</a></h3>
+          <a class="category__link" href="#"><h3>Предметы интерьера</h3></a>
         </div>
         <div class="category__item  category__item--toys">
-          <h3><a class="category__link" href="#">Детские игрушки</a></h3>
+          <a class="category__link" href="#"><h3>Детские игрушки</h3></a>
         </div>
       </div>
     </section>
@@ -117,7 +117,9 @@
         <div class="contacts__map">
           <img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Карта">
         </div>
-        <a class="contacts__btn  btn" href="#">Напишите нам</a>
+        <div class="contacts__btn-wrapper">
+          <a class="contacts__btn  btn" href="#">Напишите нам</a>
+        </div>
       </div>
     </section>
 
