--- a/form.html
+++ b/form.html
@@ -91,8 +91,10 @@
               <textarea class="order-form__textarea" name="textarea" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </div>
           </fieldset>
-          <small class="order-form__small"><sup>*</sup>Поля обязательны для заполнения</small>
-          <input class="order-form__submit btn" type="submit" name="submit" value="Отправить заказ">
+          <div class="order-form__btn">
+            <small class="order-form__small"><sup>*</sup>Поля обязательны для заполнения</small>
+            <input class="order-form__submit btn" type="submit" name="submit" value="Отправить заказ">
+          </div>
         </form>
       </div>
     </section>
