--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
       </div>
       <nav class="main-nav  main-nav--closed">
         <ul class="main-nav__list">
-          <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
+          <li class="main-nav__item  main-nav__logo"><a class="main-nav__link" href="index.html"><img src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a></li>
+          <li class="main-nav__item  main-nav__item--catalog"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item  main-nav__item--form"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
           <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
           <li class="main-nav__item  main-nav__item--basket"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
+          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link" href="#">Новые поступления</a></li>
+          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link" href="#">Распродажа</a></li>
         </ul>
       </nav>
+      <div class="page-header__free-block">
+        <span class="page-header__free">Бесплатная доставка по России</span>
+      </div>
     </header>
 
     <section class="category">
@@ -50,6 +56,7 @@
         <div class="featured__info-block">
           <p class="featured__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
           <table class="featured__description">
+            <col class="featured__col">
             <tr>
               <td><span>Цвет:</span></td>
               <td><span>«Тиффани»/серый</span></td>
