--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           <li class="main-nav__item  main-nav__item--form"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
           <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
           <li class="main-nav__item  main-nav__item--basket"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
-          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link" href="#">Новые поступления</a></li>
-          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link" href="#">Распродажа</a></li>
+          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link  main-nav__link-new" href="#">Новые поступления</a></li>
+          <li class="main-nav__item  main-nav__item--desktop"><a class="main-nav__link  main-nav__link-sale" href="#">Распродажа</a></li>
           <li class="main-nav__item  main-nav__item--tablet"><span class="main-nav__free">Бесплатная доставка по России</span></li>
         </ul>
       </nav>
